--- a/wp-content/plugins/events-manager/includes/sample-placeholders/event-single-default.html
+++ b/wp-content/plugins/events-manager/includes/sample-placeholders/event-single-default.html
@@ -5,7 +5,7 @@
 	<i>#_12HSTARTTIME - #_12HENDTIME</i>
 </p>
 <p>	
-	<strong>Location</strong><br/>
+	<strong>Hike</strong><br/>
 	#_LOCATIONLINK
 </p>
 <p>	
