--- a/wp-content/plugins/events-manager/includes/sample-placeholders/event-single.html
+++ b/wp-content/plugins/events-manager/includes/sample-placeholders/event-single.html
@@ -70,7 +70,7 @@
 	<tr>
 		<th>Where? </th>
 		<td>
-			Location Image : 
+			Hike Image : 
 			#_LOCATIONIMAGE
 			<p>
 			#_LOCATIONNAME, #_LOCATIONADDRESS, #_LOCATIONTOWN<br/>
