--- a/wp-content/plugins/events-manager/includes/css/events_manager.css
+++ b/wp-content/plugins/events-manager/includes/css/events_manager.css
@@ -136,7 +136,7 @@ div#em-loading { position:absolute; width:100%; height:100%; background:#FFFFFF 
  				#em-tickets-form .ticket-roles div { margin-left:110px; }
 	/* The editor */
 		#wp-em-editor-content-wrap table { margin-bottom:0px; }
-	/* Location form */
+	/* Hike form */
 		#em-location-data table.em-location-data td, #em-location-data table.em-location-data th { vertical-align:top; border:none; }
 		#em-location-data table.em-location-data select { width:100%; }
 		#em-location-data table.em-location-data { width:50%; float:left; border:none; }
