--- a/wp-content/plugins/events-manager/includes/css/events_manager_admin.css
+++ b/wp-content/plugins/events-manager/includes/css/events_manager_admin.css
@@ -24,9 +24,9 @@ table.events-table .category { color:#888; }
 
 /* Events Add Page */
 #event-form #event-name, #location-form, #location-name { margin: 2px 0 7px; padding: 6px 5px; width: 98%; }
-	/*Locations*/
+	/*Hikes*/
 	div.em-location-data table { float:left; margin:0px 15px 0px 0px; }
-	/* Location form */
+	/* Hike form */
 		div.em-location-data table.em-location-data td, div.em-location-data table.em-location-data th { vertical-align:top; border:none; }
 		div.em-location-data table.em-location-data { width:50%; float:left; border:none; }
 		div.em-location-data .em-location-map-container, div.em-location-data .em-location-map-404, div.em-location-data .em-location-map-content { width: 400px; height: 300px; float:left; }
