--- a/wp-content/themes/seamorg/css/style.css
+++ b/wp-content/themes/seamorg/css/style.css
@@ -1086,12 +1086,14 @@ margin-top:20px;
 	float:left;
 	padding:8px;
 	border:#e5e5e5 solid 1px;
+	margin-top:5px;
 }
 
 
 #em-location-data .em-location-map-container {
   width: 100% !important;
-  margin-top:25px;
+  margin-top:15px;
+  height:250px;
 }
 
 
@@ -1101,3 +1103,72 @@ margin-top:20px;
 }
 
 
+
+#event-name
+{
+	width:100% !important;
+	float:left;
+	padding:8px;
+	border:#e5e5e5 solid 1px;
+	height:36px;
+	margin-top:5px;
+}
+
+.create-event-part2
+{
+	margin-top:40px;
+}
+
+.event-form-name i
+{
+	display:none;
+}
+
+.em-date-input-loc
+{
+	width:100% !important;
+	float:left;
+	padding:8px;
+	border:#e5e5e5 solid 1px;
+	height:36px;
+	margin-bottom:25px;
+	margin-top:5px;
+}
+
+#event-form .inside {
+  clear: both;
+  margin-bottom: 0px;
+}
+
+.em-time-input
+{
+	width:100% !important;
+	float:left;
+	padding:8px;
+	border:#e5e5e5 solid 1px;
+	height:36px;
+	margin-bottom:15px;
+	margin-top:5px;
+}
+.ui-datepicker select.ui-datepicker-month, .ui-datepicker select.ui-datepicker-year {
+  color: #000000 !important;
+  width: 49%;
+}
+.em-date-range
+{
+	margin-top:5px;
+}
+
+.event-editor textarea 
+{
+	width:100%;
+	border:#e5e5e5 solid 1px;
+	height:150px;
+	margin:10px 0px 10px 0px;
+}
+
+
+.help-block
+{
+	font-size:12px;
+}
