--- a/wp-content/plugins/events-manager/includes/css/events_manager.css
+++ b/wp-content/plugins/events-manager/includes/css/events_manager.css
@@ -16,7 +16,7 @@ div#em-loading { position:absolute; width:100%; height:100%; background:#FFFFFF 
 		div.css-search { margin-bottom:20px; }	
 		div.em-search.css-search label { display:inline; } 
 		div.em-search.css-search div { display:block; }
-		div.css-search input, div.css-search select, div.css-search option, div.css-search div, div.css-search span, div.css-search button { 
+		div.css-search input, div.css-search select, div.css-search option,  div.css-search span, div.css-search button { 
 			width:auto; height:auto; margin:0; padding:0; float:none; display:auto; font-size:14px; /* reset everything */
 		}
 		div.css-search input, div.css-search select { padding:5px; }
