--- a/wp-content/themes/seamorg/css/style.css
+++ b/wp-content/themes/seamorg/css/style.css
@@ -164,7 +164,7 @@ height:100px !important;
 	width:15%;
 	background:#7b8d6d;
 	border:none;
-	height:35px;
+	height:33px;
 	border:none;
 	text-transform:uppercase;
 	margin-right:0px;
@@ -175,9 +175,10 @@ height:100px !important;
 .search-btn2
 {
 	color:#ffffff;
-	width:19%;
+	width:18%;
 	background:#a89715;
 	font-size:13px;
+	float:right;
 
 }
 
@@ -1245,4 +1246,89 @@ margin-top:20px;
 .em-date-input-loc2
 {
 	margin-bottom:0px !important;
+}
+
+div.css-search div.em-search-text {
+  background:none ;
+  margin: 0 0 0 5px;
+  padding-left: 0px ;
+  color:#2e2e2e ;
+}
+
+div.css-search div.em-search-main div.em-search-field input::-moz-placeholder {
+  border: medium none;
+  color: #000000;
+  font-size: 16px;
+  line-height: 16px;
+  outline: medium none;
+  padding: 8px;
+}
+
+div.css-search {
+  background:none;
+  border:none;
+  border-radius: 0px;
+  min-height: 40px;
+  padding: 0px;
+  position: relative;
+}
+
+div.css-search div.em-search-geo {
+  background:none;
+  margin: 0 0 0 0px;
+  padding-left: 0px;
+}
+
+div.css-search.has-search-geo.has-search-term input.em-search-text, div.css-search.has-search-geo.has-search-term input.em-search-geo {
+  width: 36.2%;
+}
+
+div.css-search.has-advanced div.em-search-main {
+  border-bottom:none;
+  padding-bottom: 5px;
+}
+
+
+/*div.css-search div.em-search-advanced, div.css-search div.em-search-options {
+  padding: 8px 8px;
+}*/
+
+.em-toggle
+{
+	color:#ffffff;
+}
+
+.em-toggle:hover
+{
+	color:#ffffff;
+}
+
+div.css-search input, div.css-search select {
+  padding: 5px 10px;
+}
+
+.em-search-scope 
+{
+	width:inherit !important
+}
+
+.em-events-search-country
+{
+	width:100% !important;
+	height:35px !important; 
+}
+
+div.css-search div.em-search-field {
+	padding:0px;
+  
+}
+
+.em-search-country > label, em-date-range label
+{
+	color:#ffffff;
+}
+
+.em-date-range label
+{
+	color:#ffffff;
 }
