--- a/wp-content/themes/seamorg/css/style.css
+++ b/wp-content/themes/seamorg/css/style.css
@@ -134,6 +134,7 @@ height:100px !important;
 	width:100%;
 	float:left;
 	margin-top:-55px;
+	padding-bottom:0px;
 }
 
 
@@ -1331,4 +1332,90 @@ div.css-search div.em-search-field {
 .em-date-range label
 {
 	color:#ffffff;
+}
+
+div.css-search {
+	margin-bottom:5px;
+  
+}
+
+.searchbg2 .search-btn
+{
+  padding: 5px 19px;
+}
+
+.searchbg2 div.css-search div.em-search-options {
+  text-align: center;
+}
+
+.page-id-158 .inner-searchcont
+{
+	display:none;
+}
+
+.em-booking-form-details {
+  float: left;
+  padding:0px;
+}
+
+.em-booking-form label {
+  display: inline-block;
+  width: 125px;
+}
+
+.em-booking-form-details {
+  width:auto;
+}
+
+.em-booking-form-details input.input
+ {
+  width: 250px;
+  border: 1px solid #e5e5e5;
+    height: 32px;
+	padding:2px;
+}
+
+.dbem_country
+{
+	width: 250px;
+  border: 1px solid #e5e5e5;
+    height: 36px;
+	padding:2px;
+}
+
+.em-booking-form-details textarea 
+{
+	height:100px;
+	 border: 1px solid #e5e5e5;
+}
+
+.em-ticket-select
+{
+  border: 1px solid #e5e5e5;
+  padding:5px;	
+}
+
+div.em-booking-login {
+  border:none;
+  margin: 0 0 0px;
+  padding: 10px 10px 10px 0px;
+}
+
+.input
+{
+	border: 1px solid #e5e5e5;
+    height: 36px;
+	padding:2px;
+	width:250px;
+}
+
+div.em-booking-login label {
+  display: inline-block;
+  width: 105px;
+  margin-top:25px;
+}
+
+.em-booking-form, .em-booking-login, .booking-form-section h3
+{
+	display:none;
 }
