--- a/wp-content/themes/seamorg/css/style.css
+++ b/wp-content/themes/seamorg/css/style.css
@@ -1464,6 +1464,7 @@ div.em-booking-login label {
 
 
 
+
 .booking-grid .em-bookings-cancel
 {
 	background:#817743 !important;
@@ -1473,4 +1474,54 @@ div.em-booking-login label {
 {
 	margin-top:15px;
 	margin-bottom:25px;
+}
+
+.event-grid .buyticket a {
+  background: none repeat scroll 0 0 #4a3f37;
+  color: #ffffff;
+  display: block;
+  padding: 5px;
+  font-size:13px;
+  margin-bottom: 5px;
+}
+
+
+.event-grid .em-event-rec-delete
+{
+	
+	background:#817743 !important;
+	}
+	
+	
+.event-grid .event-cont
+{
+	margin-top:15px;
+	margin-bottom:25px;
+}
+
+
+#posts-filter .button-primary {
+  background: none repeat scroll 0 0 #7b8d6d;
+  border: medium none;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 300;
+  height: 34px;
+  padding: 0 20px;
+}
+
+.screen-reader-text
+{
+	font-weight:600;
+}
+
+a.em-button {
+  margin: 10px 5px 5px;
+}
+
+#post-search-input 
+{
+	  border: 1px solid #e5e5e5;
+    height: 36px;
+	padding:2px;
 }
