--- a/wp-content/themes/seamorg/css/style.css
+++ b/wp-content/themes/seamorg/css/style.css
@@ -6,7 +6,7 @@ body
 	font-family: 'Lato', sans-serif;
 	font-size:15px;
 	line-height:22px;
-	background:#32271e;
+
 }
 
 
@@ -294,7 +294,7 @@ margin:50px 0px 50px 0px;
 
 .buyticket
 {
-	width:40%;
+	width:auto;
 	float:left;
 	text-align:center;
 	text-transform:uppercase;
