--- a/wp-content/themes/seamorg/css/style.css
+++ b/wp-content/themes/seamorg/css/style.css
@@ -295,7 +295,7 @@ margin:50px 0px 50px 0px;
 .buyticket
 {
 	width:auto;
-	float:left;
+	float:right;
 	text-align:center;
 	text-transform:uppercase;
 	font-size:17px;
