--- a/wp-content/themes/seamorg/css/responsive.css
+++ b/wp-content/themes/seamorg/css/responsive.css
@@ -210,4 +210,13 @@ display:none!important
   width: 100%;
 }
 
+.searchfield1 {
+  width: 33.1% !important;
+}
+
+.search-btn2 {
+  width: 22%;
+}
+
+
 }
