--- a/wp-content/themes/seamorg/css/responsive.css
+++ b/wp-content/themes/seamorg/css/responsive.css
@@ -128,6 +128,15 @@ display:none!important
 {
 	margin-top:0px;
 }
+
+.em-search-geo {
+  width: 73% !important;
+}
+
+.searchfield1
+{
+	width:99.5% !important;
+}
 }
 @media (min-width:768px)and (max-width:991px) {
 .hidden-sm {
@@ -194,6 +203,20 @@ display:none!important
   border-radius: 999px !important;
 }
 
+.em-search-geo {
+  width: 36.5% !important;
+}
+
+.searchfield1
+{
+	width:99.5% !important;
+}
+
+.searchfield2 {
+
+  width: 99% !important;
+}
+
 }
 @media (min-width:992px)and (max-width:1199px) {
 .hidden-md {
@@ -210,12 +233,27 @@ display:none!important
   width: 100%;
 }
 
-.searchfield1 {
+/*.searchfield1 {
   width: 33.1% !important;
 }
-
+*/
 .search-btn2 {
   width: 22%;
+}
+
+
+.em-search-geo {
+  width: 39% !important;
+}
+
+.searchfield1
+{
+	width:99.5% !important;
+}
+
+.searchfield2 {
+
+  width: 99% !important;
 }
 
 
