--- a/wp-content/themes/seamorg/css/responsive.css
+++ b/wp-content/themes/seamorg/css/responsive.css
@@ -262,5 +262,11 @@ display:none!important
   width: 99% !important;
 }
 
+.footer-row1 {
+  float: left;
+  margin-top: -75px !important;
+  text-align: center;
+  width: 100%;
+}
 
 }
