--- a/wp-content/themes/seamorg/css/style.css
+++ b/wp-content/themes/seamorg/css/style.css
@@ -1047,9 +1047,9 @@ div.em-booking-login label {
 	width: 105px;
 	margin-top:25px;
 }
-.em-booking-form, .em-booking-login, .booking-form-section h3 {
+/*.em-booking-form, .em-booking-login, .booking-form-section h3 {
 	display:none;
-}
+}*/
 .um-field-label label {
 	font-size: 15px !important;
 	font-weight: 300;
