--- a/wp-content/themes/seamorg/css/style.css
+++ b/wp-content/themes/seamorg/css/style.css
@@ -1452,7 +1452,7 @@ ul.time_slots li { margin-right: 5px;  }
 }
 
 
-.um-meta-text 
+.um-meta-text
 {
 	  margin-bottom: 15px;
 }
@@ -1482,4 +1482,7 @@ ul.time_slots li { margin-right: 5px;  }
 
 .um-profile {
   border: 5px solid #f5f5f5;
+}
+.mt10{
+    margin-top: 10px;
 }
